--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "prod": "ng build --prod --base-href=/pwa/",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "build:stats": "ng build --prod --stats-json",
+    "bundle-report": "webpack-bundle-analyzer dist/ng-lister-pwa/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -45,6 +47,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "webpack-bundle-analyzer": "^4.3.0"
   }
 }
