--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
     "@angular/service-worker": "~11.0.5",
+    "file-saver": "^2.0.5",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.3",
     "zone.js": "~0.11.3"
@@ -34,6 +35,7 @@
     "@angular-devkit/build-angular": "~0.1100.5",
     "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.5",
+    "@types/file-saver": "^2.0.2",
     "@types/jasmine": "~3.6.2",
     "@types/node": "^14.14.16",
     "codelyzer": "^6.0.1",
