--- a/package.json
+++ b/package.json
@@ -5,36 +5,36 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "prod": "ng build --prod --base-href=/pwa/",
+    "prod": "ng build --configuration production --base-href=/pwa/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:stats": "ng build --prod --stats-json",
+    "build:stats": "ng build --configuration production --stats-json",
     "bundle-report": "webpack-bundle-analyzer dist/ng-lister-pwa/stats.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.5",
+    "@angular/animations": "^12.2.16",
     "@angular/cdk": "^11.0.3",
-    "@angular/common": "~11.0.5",
-    "@angular/compiler": "~11.0.5",
-    "@angular/core": "~11.0.5",
+    "@angular/common": "~12.2.16",
+    "@angular/compiler": "~12.2.16",
+    "@angular/core": "~12.2.16",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~11.0.5",
+    "@angular/forms": "~12.2.16",
     "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "~11.0.5",
-    "@angular/platform-browser-dynamic": "~11.0.5",
-    "@angular/router": "~11.0.5",
-    "@angular/service-worker": "~11.0.5",
+    "@angular/platform-browser": "~12.2.16",
+    "@angular/platform-browser-dynamic": "~12.2.16",
+    "@angular/router": "~12.2.16",
+    "@angular/service-worker": "~12.2.16",
     "file-saver": "^2.0.5",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.3",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.0",
-    "@angular/cli": "~11.0.5",
-    "@angular/compiler-cli": "~11.0.5",
+    "@angular/cli": "~12.2.16",
+    "@angular/compiler-cli": "~12.2.16",
     "@types/file-saver": "^2.0.2",
     "@types/jasmine": "~3.6.2",
     "@types/node": "^14.14.16",
@@ -49,7 +49,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
+    "typescript": "~4.3.5",
     "webpack-bundle-analyzer": "^4.3.0"
   }
 }
