--- a/package.json
+++ b/package.json
@@ -15,41 +15,42 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^13.3.0",
-    "@angular/cdk": "^12.2.13",
+    "@angular/cdk": "^13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
-    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.3.0",
-    "@angular/material": "^12.2.13",
+    "@angular/material": "^13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@angular/service-worker": "~13.3.0",
     "file-saver": "^2.0.5",
-    "rxjs": "~6.6.3",
-    "tslib": "^2.0.3",
-    "zone.js": "~0.11.4"
+    "npm-check-updates": "^12.5.4",
+    "rxjs": "~7.5.5",
+    "tslib": "^2.3.1",
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.0",
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
-    "@types/file-saver": "^2.0.2",
-    "@types/jasmine": "~3.6.2",
-    "@types/node": "^14.14.16",
-    "codelyzer": "^6.0.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
+    "@types/file-saver": "^2.0.5",
+    "@types/jasmine": "~4.0.0",
+    "@types/node": "^17.0.21",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~4.0.1",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.3.17",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
     "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "~9.1.1",
+    "ts-node": "~10.7.0",
     "tslint": "~6.1.0",
     "typescript": "~4.6.2",
-    "webpack-bundle-analyzer": "^4.3.0"
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
