--- a/package.json
+++ b/package.json
@@ -14,43 +14,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.3.2",
-    "@angular/cdk": "^13.3.2",
-    "@angular/common": "~13.3.2",
-    "@angular/compiler": "~13.3.2",
-    "@angular/core": "~13.3.2",
+    "@angular/animations": "^13.3.5",
+    "@angular/cdk": "^13.3.5",
+    "@angular/common": "~13.3.5",
+    "@angular/compiler": "~13.3.5",
+    "@angular/core": "~13.3.5",
     "@angular/flex-layout": "^13.0.0-beta.38",
-    "@angular/forms": "~13.3.2",
-    "@angular/material": "^13.3.2",
-    "@angular/platform-browser": "~13.3.2",
-    "@angular/platform-browser-dynamic": "~13.3.2",
-    "@angular/router": "~13.3.2",
-    "@angular/service-worker": "~13.3.2",
+    "@angular/forms": "~13.3.5",
+    "@angular/material": "^13.3.5",
+    "@angular/platform-browser": "~13.3.5",
+    "@angular/platform-browser-dynamic": "~13.3.5",
+    "@angular/router": "~13.3.5",
+    "@angular/service-worker": "~13.3.5",
     "file-saver": "^2.0.5",
+    "hammerjs": "^2.0.8",
     "node-sass": "^7.0.1",
     "rxjs": "~7.5.5",
-    "tslib": "^2.3.1",
+    "tslib": "^2.4.0",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.2",
-    "@angular/cli": "~13.3.2",
-    "@angular/compiler-cli": "~13.3.2",
+    "@angular-devkit/build-angular": "^13.3.4",
+    "@angular/cli": "~13.3.4",
+    "@angular/compiler-cli": "~13.3.5",
     "@types/file-saver": "^2.0.5",
-    "@types/jasmine": "~4.0.2",
-    "@types/node": "^17.0.23",
+    "@types/jasmine": "~4.0.3",
+    "@types/node": "^17.0.30",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~4.0.1",
+    "jasmine-core": "~4.1.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "^6.3.17",
+    "karma": "^6.3.19",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~4.0.2",
+    "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
     "ts-node": "~10.7.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.3",
+    "typescript": "~4.6.4",
     "webpack-bundle-analyzer": "^4.5.0"
   }
 }
