--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@angular/router": "~13.3.5",
     "@angular/service-worker": "~13.3.5",
     "file-saver": "^2.0.5",
-    "hammerjs": "^2.0.8",
     "node-sass": "^7.0.1",
     "rxjs": "~7.5.5",
     "tslib": "^2.4.0",
@@ -38,6 +37,7 @@
     "@angular/cli": "~13.3.4",
     "@angular/compiler-cli": "~13.3.5",
     "@types/file-saver": "^2.0.5",
+    "@types/hammerjs": "^2.0.41",
     "@types/jasmine": "~4.0.3",
     "@types/node": "^17.0.30",
     "codelyzer": "^6.0.2",
