--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.3.5",
+    "@angular/animations": "^14.1.3",
     "@angular/cdk": "^13.3.5",
-    "@angular/common": "~13.3.5",
-    "@angular/compiler": "~13.3.5",
-    "@angular/core": "~13.3.5",
+    "@angular/common": "^14.1.3",
+    "@angular/compiler": "^14.1.3",
+    "@angular/core": "^14.1.3",
     "@angular/flex-layout": "^13.0.0-beta.38",
-    "@angular/forms": "~13.3.5",
+    "@angular/forms": "^14.1.3",
     "@angular/material": "^13.3.5",
-    "@angular/platform-browser": "~13.3.5",
-    "@angular/platform-browser-dynamic": "~13.3.5",
-    "@angular/router": "~13.3.5",
-    "@angular/service-worker": "~13.3.5",
+    "@angular/platform-browser": "^14.1.3",
+    "@angular/platform-browser-dynamic": "^14.1.3",
+    "@angular/router": "^14.1.3",
+    "@angular/service-worker": "^14.1.3",
     "file-saver": "^2.0.5",
     "node-sass": "^7.0.1",
     "rxjs": "~7.5.5",
@@ -33,9 +33,9 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.4",
-    "@angular/cli": "~13.3.4",
-    "@angular/compiler-cli": "~13.3.5",
+    "@angular-devkit/build-angular": "^14.1.3",
+    "@angular/cli": "^14.1.3",
+    "@angular/compiler-cli": "^14.1.3",
     "@types/file-saver": "^2.0.5",
     "@types/hammerjs": "^2.0.41",
     "@types/jasmine": "~4.0.3",
