--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/core": "^15.2.9",
     "@angular/flex-layout": "^14.0.0-beta.41",
     "@angular/forms": "^15.2.9",
-    "@angular/material": "^14.2.2",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
@@ -40,6 +40,7 @@
     "@types/hammerjs": "^2.0.41",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^18.7.18",
+    "ajv": "^8.12.0",
     "codelyzer": "^6.0.2",
     "jasmine-core": "~4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
