Smashed some glitchs due to ng update

--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": ["file-saver"],
             "outputPath": "dist/ng-lister-pwa",
             "index": "src/index.html",
             "main": "src/main.ts",
